<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class="ProductsFoodIntakeFragmentBinding" />

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".activity.AddFoodIntakeActivity">

            <LinearLayout
                android:id="@+id/ll1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/add_food_intake_date_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_food_intake_products_label"
                    app:layout_constraintEnd_toStartOf="@+id/add_food_intake_add_product_row_btn"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/add_food_intake_date_btn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_weight="1"
                    android:text="@string/add_food_intake_products_label_text"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/add_food_intake_add_product_row_btn"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    app:layout_constraintTop_toBottomOf="@+id/products_scroll_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_add_list_item"
                    android:text="@string/add_food_intake_add_product_row_btn_text"
                    android:textSize="18sp"
                    android:tint="@color/colorAccent" />

            </LinearLayout>

            <ScrollView
                android:id="@+id/products_scroll_view"
                app:layout_constraintBottom_toTopOf="@+id/add_food_intake_resume_wrapper"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <LinearLayout
                    android:id="@+id/add_food_intake_products_root_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ll1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>


            </ScrollView>

            <LinearLayout
                android:id="@+id/add_food_intake_resume_wrapper"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="8dp"
                android:visibility="gone">

                <TextView
                    android:id="@+id/add_food_intake_proteins_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_food_intake_proteins_label_text"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/add_food_intake_proteins"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="2.2" />

                <TextView
                    android:id="@+id/add_food_intake_fats_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_food_intake_fats_label_text"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/add_food_intake_fats"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="3.3" />

                <TextView
                    android:id="@+id/add_food_intake_carbohydrates_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/add_food_intake_carbohydrates_label_text"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/add_food_intake_carbohydrates"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    tools:text="4.4" />

            </LinearLayout>


        </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>
